package org.example.moedaestudantecombd.model;

public class Usuario {
}
