package org.example.moedaestudantecombd.service;

public class Autenticacao {
}
